syntax = "proto3";
package s2a.tile;
option csharp_namespace = "Sentinal2Utilities.Tile.Proto";

message ProtoFootprintCollection {
	message ProtoCoordinate {
		double Latitude = 1;
		double Longitude = 2;
	}

	message ProtoFootprint {
		string TilePosition = 1;

		repeated ProtoCoordinate coordinates = 2;
	}

	string KMLFile = 1;
	uint64 CompileDate = 2;
	repeated ProtoFootprint Footprints = 3;
}
